# gameai-opencv

./: CMakeLists.txt  README.md
src/: 1_capture_show_image.cpp  2_capture_show_video.cpp  3_capture_show_record_video.cpp  4_filter.cpp
